overflow issue

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4936,7 +4936,7 @@ text-align: center;
 }
 
 html{
-  overflow-y: hidden;
+  overflow-y: auto;
 }
 
 .hma{
